--- a/app/views/ShowQrcodeView.html
+++ b/app/views/ShowQrcodeView.html
@@ -16,7 +16,7 @@
 
                 <h3 class="mt-5 d-flex justify-content-center">Scan Me</h3>
 
-                <img src="{{qrcode}}" alt="" class="mt-3">
+                <img src="{{qrcode}}" alt="" class="mt-3 justify-content-center">
             </div>
         </div>
 
