--- a/app/views/ShowQrcodeView.html
+++ b/app/views/ShowQrcodeView.html
@@ -11,7 +11,7 @@
     <main class="container mt-5 d-flex justify-content-center">
 
         <div class="row">
-            <div class="col">
+            <div class="col showqrcode">
                 <h3 class="mb-5 d-flex justify-content-center">{{name}}</h3>
 
                 <h3 class="mt-5 d-flex justify-content-center">Scan Me</h3>
